<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".activity_register">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvRegisterTitle"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </TextView>
    <EditText
        android:id="@+id/userID"
        android:hint="@string/userID"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/textField"
        android:inputType="text"
        android:paddingHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">
    </EditText>
    <EditText
        android:id="@+id/firstName"
        android:hint="@string/firstName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/textField"
        android:inputType="text"
        android:paddingHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">
    </EditText>
    <EditText
        android:id="@+id/familyName"
        android:hint="@string/familyName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/textField"
        android:inputType="text"
        android:paddingHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">
        </EditText>
    <EditText
        android:id="@+id/DOB"
        android:hint="@string/DOB"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/textField"
        android:inputType="text"
        android:paddingHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">
    </EditText>
    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/textField"
        android:inputType="text"
        android:paddingHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">
    </EditText>
    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/textField"
        android:inputType="textPassword"
        android:paddingHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">
    </EditText>
    <Button
        android:id="@+id/register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_700"
        android:onClick="registerNewUser"
        android:padding="10dp"
        android:text="@string/buRegister"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">>

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>