<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">
    </TextView>

    <EditText
        android:id="@+id/userID"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/textField"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/userID"
        android:inputType="text"
        android:paddingHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/textField"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"></EditText>


    <Button
        android:id="@+id/login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_700"
        android:onClick="login"
        android:padding="10dp"
        android:text="@string/buLogin"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">
    </Button>
    <Button
        android:id="@+id/register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_700"
        android:onClick="register"
        android:padding="10dp"
        android:text="@string/buRegister"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">>

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>